--- a/source/stylesheets/pages/_team.scss
+++ b/source/stylesheets/pages/_team.scss
@@ -1,20 +1,28 @@
-.layout {
-  background-color: lightgrey;
-  margin-bottom: 300px;
+body {
+  background-color: white;
 }
 
 .img-circle {
   width: 150px;
 }
 .container {
+  background-color: $light-gray;
+  margin-bottom: 300px;
   h1 {
       font-size: 30px;
       font-weight: lighter;
   }
 }
 h1 i {
-  color: red;
+  color: $red;
 }
 .profile {
 
 }
+h1, h2, h3 {
+  font-family: $headers-font;
+}
+p, a {
+  font-family: $body-font;
+}
+
