--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,3 +1,10 @@
+h1, h2, h3 {
+  font-family: $headers-font;
+}
+p, a {
+  font-family: $body-font;
+}
+
 /* card */
 .card {
   height: 175px;
@@ -26,14 +33,14 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-}
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
+  h2 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 14px;
+    opacity: 0.7;
+    font-weight: lighter;
+  }
 }
 .card-link {
   position: absolute;
@@ -44,7 +51,8 @@
   z-index: 2;
   background: black;
   opacity: 0;
+  &:hover {
+    opacity: 0.1;
+  }
 }
-.card-link:hover {
-  opacity: 0.1;
-}
+
