--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,3 +1,10 @@
+h1, h2, h3 {
+  font-family: $headers-font;
+}
+p, a {
+  font-family: $body-font;
+}
+
 .footer {
   background: #F4F4F4;
   display: flex;
@@ -10,17 +17,17 @@
 .footer-links {
   display: flex;
   align-items: center;
-}
-.footer-links a {
-  color: black;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
+  a {
+    color: black;
+    opacity: 0.15;
+    text-decoration: none;
+    font-size: 24px;
+    padding: 0px 10px;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $red;
 }
