--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$red: #96031A;
+$blue: #2274A5;
+$yellow: #EECF6D;
+$orange: #B39C4D;
+$green: #8BBEB2;
+$gray: #848484;
 $light-gray: #F4F4F4;
