--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -1,10 +1,17 @@
+h1, h2, h3 {
+  font-family: $headers-font;
+}
+p, a {
+  font-family: $body-font;
+}
+
 #about {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  background-image: linear-gradient(0deg, white 50%, #F4F4F4 50%);
+  background-image: linear-gradient(0deg, white 50%, $light-gray 50%);
   img {
     width: 150px;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
@@ -28,6 +35,6 @@
     font-size: 15px;
   }
   .fa-heart {
-    color: #D23333;
+    color: $red;
   }
 }
