--- a/source/stylesheets/pages/_team.scss
+++ b/source/stylesheets/pages/_team.scss
@@ -5,7 +5,7 @@ body {
 .img-circle {
   width: 150px;
 }
-.container {
+.container-team {
   background-color: $light-gray;
   margin-bottom: 300px;
   h1 {
