--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -3,7 +3,7 @@ title: Le Wagon - Middleman - Team
 ---
 
 
-<div class="container">
+<div class="container-team">
   <h1 class="text-center">This template is built with <i class="fas fa-heart"></i> by</h1>
   <ul class="list-inline text-center">
     <% ["clement174", "henridvs"].each do |gh_username| %>
