--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,31 +2,30 @@
 title: Le Wagon - Middleman
 ---
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/nantes');">
   <div class="banner-content">
-    <h1>Le Wagon Berlin</h1>
-    <p>Learn to code with us in Berlin</p>
+    <h1>Le Wagon Nantes</h1>
+    <p>Learn to code with us in Nantes</p>
     <a class="btn btn-primary btn-lg">Start now</a>
   </div>
 </div>
 
-<div class="container">
-  <div class="grid">
-    <div class="row">
-      <% %w(paris london berlin rio).each do |city| %>
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= city %>');">
-          <div class="card-category">Popular</div>
+<div class="container-cards" id="home-flats">
+  <h2 class="text-center">Recent flats</h2>
+  <div class="row">
+    <% data.flats.each do |owner, flat| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+          <div class="card-category"><%= flat.city_name %></div>
           <div class="card-description">
-            <h2>Le Wagon <%= city %></h2>
-            <p>Very cool city, the best</p>
+            <h3><%= flat.name %></h3>
+            <p><%= flat.description %></p>
           </div>
-          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-          <a class="card-link" href="#" ></a>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{owner}", class:"card-user" %>
+          <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
         </div>
       </div>
-      <% end %>
-    </div>
+    <% end %>
   </div>
-
 </div>
+
